--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,78 @@
-html,
 body {
-  padding: 0;
+  background-color: black;
+  color: whitesmoke;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+label,
+button {
+  display: block;
+  font-family: "Cinzel", Cursive !important;
+  white-space: pre;
+  text-transform: none !important;
+  /* font-size: 44px; */
+}
+
+p,
+a,
+ul,
+li,
+input,
+textarea {
+  font-family: "Fauna One", Serif !important;
+  white-space: pre-wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  /* font-size: 14px; */
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  color: inherit;
 }
 
-* {
-  box-sizing: border-box;
+.App {
+  text-align: center;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
   }
-  body {
-    color: white;
-    background: black;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
