--- a/components/page-heading/page-heading.module.css
+++ b/components/page-heading/page-heading.module.css
@@ -14,7 +14,7 @@
   width: 80vw;
   max-width: 600px;
   justify-content: center;
-  align-self: normal;
+  align-self: center;
 }
 
 .heading_container h1 {
@@ -43,7 +43,7 @@
 
 @media (max-width: 500px) {
   .heading_container h1 {
-    font-size: 42px;
+    font-size: 36px;
   }
 }
 @media (min-width: 1600px) {
