--- a/pages/locations/locations.module.css
+++ b/pages/locations/locations.module.css
@@ -13,6 +13,7 @@
   width: 100%;
   max-width: 800px;
   height: 100%;
+  min-height: 500px;
   border: whitesmoke 2px solid;
   border-radius: 15px;
   overflow: hidden;
@@ -22,6 +23,10 @@
   display: flex;
   flex-direction: column;
   flex: 1.5;
+  min-height: 100%;
+  /* align-content: center; */
+  /* align-items: center; */
+  justify-content: space-around;
 }
 
 .location_container {
