--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -31,16 +31,20 @@
 
 .nav {
   display: flex;
-  justify-content: right;
-  align-items: center;
+  /* justify-content: right; */
+  /* align-items: center; */
   margin-right: 20px !important;
   flex-direction: column;
+  flex: 1;
+  height: 100%;
+  margin-top: 30px;
 }
 
 .nav ul {
   display: flex;
-  flex-direction: "row";
+  flex-direction: row;
   list-style-type: none;
+  /* align-items: flex-start; */
 }
 
 .nav_2 {
