--- a/components/page-heading/page-heading.module.css
+++ b/components/page-heading/page-heading.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  justify-content: center;
   margin-top: 20px;
   padding: 0 0;
 }
@@ -21,6 +22,7 @@
   margin: 0 0;
   font-size: 64px;
   line-height: 56px;
+  text-align: center;
 }
 
 .heading_container p {
@@ -41,9 +43,9 @@
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .heading_container h1 {
-    font-size: 36px;
+    font-size: 30px;
   }
 }
 @media (min-width: 1600px) {
