--- a/pages/menus/menus.module.css
+++ b/pages/menus/menus.module.css
@@ -1,12 +1,18 @@
 .menu_item_container {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   max-width: 1200px;
+}
+.ul_container {
+  display: flex;
+  width: 100%;
   justify-content: space-evenly;
 }
 
 @media (max-width: 800px) {
-  .menu_item_container {
+  .ul_container {
     flex-direction: column;
     gap: 80px;
   }
