--- a/components/social-nav-container/social-nav.module.css
+++ b/components/social-nav-container/social-nav.module.css
@@ -19,9 +19,10 @@
   display: flex;
   align-items: center;
 }
+
 .footer_social_container ul {
   display: flex;
-  flex-direction: "row";
+  flex-direction: row;
   flex-wrap: wrap;
 }
 
@@ -38,7 +39,7 @@
 
 .header_social_container ul {
   display: flex;
-  flex-direction: "row";
+  flex-direction: row;
 }
 
 .header_social_container button {
