--- a/components/menu-item/menu-item.module.css
+++ b/components/menu-item/menu-item.module.css
@@ -5,10 +5,8 @@
   padding: 23px 13px;
   border-radius: 15px;
   gap: 10px;
-  justify-content: center;
-  align-self: center;
 }
-.menu_item_container:hover {
+.menu_item_container_hover {
   border: whitesmoke solid 3px;
   padding: 20px 10px;
 }
