--- a/pages/menus/menus.module.css
+++ b/pages/menus/menus.module.css
@@ -1,19 +1,14 @@
 .menu_item_container {
-  display: flex;
-  align-items: center;
-  width: 100% !important;
-  max-width: 1200px;
-}
-
-.ul_container {
-  display: flex;
-  width: 100%;
-  justify-content: space-evenly;
+  /* display: flex; */
+  /* align-items: center; */
+  /* width: 100% !important; */
+  /* max-width: 1200px; */
 }
 
 @media (max-width: 800px) {
-  .ul_container {
+  .menu_item_container {
     flex-direction: column;
+    align-items: center;
     gap: 80px;
   }
 }
