--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,9 @@ textarea {
 .menus_section {
   display: flex;
   width: 100%;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  /* height: 2000px; */
 }
 
 a {
