--- a/components/page-heading/page-heading.module.css
+++ b/components/page-heading/page-heading.module.css
@@ -7,11 +7,13 @@
   margin-top: 20px;
   padding: 0 0;
   width: 100%;
+  text-align: center;
+  max-width: 800px;
 }
 
 .bar {
   border: 1px solid whitesmoke;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   /* display: flex; */
   width: 80%;
   /* max-width: 600px; */
@@ -40,7 +42,7 @@
     line-height: 50px;
   }
   .heading_container h3 {
-    font-size: 20px;
+    font-size: 16px;
   }
 }
 
@@ -49,5 +51,5 @@
     font-size: 36px;
   }
 }
-@media (min-width: 1600px) {
-}
+
+
