--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,6 +45,19 @@ a {
   color: inherit;
 }
 
+.heading_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  padding: 0 0;
+  width: 100%;
+  text-align: center;
+  max-width: 800px;
+}
+
 .notification_container {
   /* position: absolute;
   top: 0;
