--- a/components/page-heading/page-heading.module.css
+++ b/components/page-heading/page-heading.module.css
@@ -3,8 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  justify-content: center;
-  margin-top: 20px;
+  margin: 20px auto 0 auto;
   padding: 0 0;
   width: 100%;
   text-align: center;
