--- a/pages/[slug]/menu/menu.module.css
+++ b/pages/[slug]/menu/menu.module.css
@@ -5,7 +5,7 @@
   /* text-align: center; */
   /* max-width: 2000px !important; */
   width: 100%;
-  /* max-width: 1000px; */
+  max-width: 1000px;
   margin: 0 30px;
 }
 
