--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,8 +50,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  justify-content: center;
-  margin-top: 20px;
+  margin: 20px auto 0 auto;
   padding: 0 0;
   width: 100%;
   text-align: center;
