--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -1,6 +1,6 @@
 .nav_container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr auto;
   grid-template-rows: 100%;
   height: auto;
   background-color: black;
@@ -125,7 +125,7 @@
   display: none;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
   .logo_container {
     display: none;
   }
@@ -140,7 +140,7 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 880px) {
   .nav {
     display: none;
   }
