major changes, change to map makes it more accurate and functional, added @ to locations, made images better

--- a/components/location-item/location-item.module.css
+++ b/components/location-item/location-item.module.css
@@ -25,11 +25,12 @@
   max-width: 300px;
   margin: 10px 10px;
   align-items: center;
+  position: relative;
 }
 
 .img {
   border-radius: 15px;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .location_container h1 {
