--- a/components/menu-item/menu-item.module.css
+++ b/components/menu-item/menu-item.module.css
@@ -19,6 +19,12 @@
   position: relative;
 }
 
+.image_container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .name_container {
   display: flex;
   flex-direction: column;
@@ -77,4 +83,4 @@
   .a_tag {
     font-size: 14px;
   }
-} ;
+}
