--- a/pages/locations/locations.module.css
+++ b/pages/locations/locations.module.css
@@ -101,6 +101,10 @@
     overflow: hidden;
   }
 
+  .map_outer {
+    flex: none;
+  }
+
   .locations_container {
     display: flex;
     flex-direction: column;
