events layout done, needs minor details. book an event done, 1st draft.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,8 @@ a,
 ul,
 li,
 input,
-textarea {
+textarea,
+option {
   font-family: "Fauna One", Serif !important;
   white-space: pre-wrap;
   list-style: none;
