updated past events, testing it out

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -106,6 +106,14 @@ a {
   }
 }
 
+.atcb-list {
+  z-index: 2000;
+  position: absolute;
+}
+.atcb-light {
+  z-index: 2000;
+  position: absolute;
+}
 .carousel {
   /* height: 100%; */
 }
@@ -130,6 +138,7 @@ a {
   width: 100% !important; */
 }
 
-
-
-
+.calendar-button {
+  height: 100px;
+  width: 100px;
+}
