--- a/pages/events/past/past.module.css
+++ b/pages/events/past/past.module.css
@@ -1,7 +1,116 @@
+.past_events_grid_container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 30px;
+  margin: 10px 20px;
+  grid-auto-rows: minmax(300px; auto);
+  max-width: 1800px;
+}
+.past_events_container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.past_events_card {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  border: #f1f1f1 solid 3px;
+  overflow: hidden;
+  z-index: 1000px;
+  border-radius: 12px;
+}
+
+.crsl {
+  height: 100%;
+  display: flex;
+  flex: 0.7;
+  background-color: #f1f1f1;
+  align-items: center;
+  cursor: zoom-in;
+}
+
+.past_event_content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  justify-content: center;
+  min-height: 350px;
+}
+
+.past_event_content h3 {
+  margin: 0px;
+  font-size: 20px;
+}
+.past_event_content h4 {
+  display: flex;
+  flex-direction: column;
+  margin: 6px 0 6px 0;
+  font-size: 16px;
+  background-color: #f1f1f1;
+  color: #1b1b1b;
+  padding: 5px;
+  border-radius: 10px;
+}
+.past_event_content h4 span {
+  font-family: "Fauna One", Serif;
+  font-weight: lighter;
+}
+.add_to_cal_button {
+  display: flex;
+  justify-content: center;
+}
+
+.modal {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #000000c4;
+  position: fixed;
+  z-index: 300000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: zoom-out;
+}
+
+.modal_crsl {
+  cursor: initial;
+}
+
+@media (max-width: 1300px) {
+  .past_events_grid_container {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 750px) {
+  .past_event_content h3 {
+    font-size: 16px;
+  }
+  .past_event_content h4 span {
+    font-size: 14px;
+  }
+}
+@media (max-width: 800px) {
+  .past_events_grid_container {
+    grid-template-columns: 1fr;
+  }
+}
+
 .block_content p {
   margin: 10px;
   font-size: 12px;
 }
+
 @media (max-width: 800px) {
   .block_content p {
     margin: 4px;
