--- a/pages/events/past/past.module.css
+++ b/pages/events/past/past.module.css
@@ -62,7 +62,7 @@
   font-family: "Fauna One", Serif;
   font-weight: lighter;
 }
-.add_to_cal_button {
+.button_container {
   display: flex;
   justify-content: center;
 }
@@ -82,9 +82,19 @@
   cursor: zoom-out;
 }
 
+.close_modal_button {
+  display: flex;
+  justify-content: right;
+  width: 50%;
+  margin-bottom: 10px;
+  gap: 10px;
+}
+
 .modal_crsl {
   cursor: initial;
+  height: auto;
 }
+
 
 @media (max-width: 1300px) {
   .past_events_grid_container {
@@ -92,7 +102,10 @@
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 800px) {
+  .past_events_grid_container {
+    grid-template-columns: 1fr;
+  }
   .past_event_content h3 {
     font-size: 16px;
   }
@@ -100,11 +113,8 @@
     font-size: 14px;
   }
 }
-@media (max-width: 800px) {
-  .past_events_grid_container {
-    grid-template-columns: 1fr;
-  }
-}
+
+
 
 .block_content p {
   margin: 10px;
