--- a/pages/events/past/past.module.css
+++ b/pages/events/past/past.module.css
@@ -85,7 +85,7 @@
 .close_modal_button {
   display: flex;
   justify-content: right;
-  width: 50%;
+  width: 30%;
   margin-bottom: 10px;
   gap: 10px;
 }
@@ -95,10 +95,12 @@
   height: auto;
 }
 
-
 @media (max-width: 1300px) {
   .past_events_grid_container {
     grid-template-columns: 1fr 1fr;
+  }
+  .close_modal_button {
+    width: 40%;
   }
 }
 
@@ -112,9 +114,10 @@
   .past_event_content h4 span {
     font-size: 14px;
   }
+  .close_modal_button {
+    width: 90%;
+  }
 }
-
-
 
 .block_content p {
   margin: 10px;
