--- a/styles/globals.css
+++ b/styles/globals.css
@@ -109,3 +109,17 @@ a {
 .modal_crsl .carousel .slide img {
   max-height: 80vh; /* change this to whatever you want */
 }
+
+.modal_crsl .carousel .slide img {
+  max-height: 80vh; /* change this to whatever you want */
+}
+@media (max-width: 800px) {
+  .modal_crsl .carousel .slide img {
+    max-height: 60vh; /* change this to whatever you want */
+  }
+}
+@media (max-height: 600px) {
+  .modal_crsl .carousel .slide img {
+    max-height: 80vh; /* change this to whatever you want */
+  }
+}
