--- a/pages/events/book/book.module.css
+++ b/pages/events/book/book.module.css
@@ -33,6 +33,7 @@
   font-size: 16px;
   border: none;
   margin: 3px;
+  color: #1b1b1b;
 }
 
 .contact_form input:focus {
@@ -51,6 +52,7 @@
   letter-spacing: 0.5px;
   font-size: 16px;
   border: none;
+  color: #1b1b1b;
 }
 
 .contact_form select:focus {
@@ -66,6 +68,7 @@
 }
 
 .description textarea {
+  color: #1b1b1b;
   outline: none;
   border-radius: 15px;
   padding: 10px;
@@ -97,6 +100,10 @@
 .submit:active {
   background-color: none !important;
   outline: none !important;
+}
+
+.contact_form input[type="date"] {
+  color: #1b1b1b;
 }
 
 @media (max-width: 400px) {
