--- a/styles/globals.css
+++ b/styles/globals.css
@@ -108,13 +108,16 @@ a {
 }
 
 .modal_crsl .carousel .slide img {
-  max-height: 80vh; /* change this to whatever you want */
+  max-height: 70vh; /* change this to whatever you want */
+
 }
 
-.modal_crsl .carousel .slide img {
-  max-height: 80vh; /* change this to whatever you want */
-}
 @media (max-width: 800px) {
+  .modal_crsl .carousel .slide img {
+    max-height: 60vh; /* change this to whatever you want */
+  }
+}
+@media (max-height: 800px) {
   .modal_crsl .carousel .slide img {
     max-height: 60vh; /* change this to whatever you want */
   }
