--- a/pages/events/past/past.module.css
+++ b/pages/events/past/past.module.css
@@ -3,7 +3,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 30px;
   margin: 30px 20px 20px 20px;
-  grid-auto-rows: minmax(300px, auto);
+  grid-auto-rows: auto;
   max-width: 1800px;
 }
 .past_events_container {
