--- a/pages/events/past/past.module.css
+++ b/pages/events/past/past.module.css
@@ -1,8 +1,8 @@
 .past_events_grid_container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-gap: 30px;
-  margin: 30px 20px 20px 20px;
+  margin: 30px 30px 10px 30px;
   grid-auto-rows: auto;
   max-width: 1800px;
 }
@@ -45,7 +45,7 @@
 
 @media (max-width: 1300px) {
   .past_events_grid_container {
-    grid-template-columns: 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr; */
   }
   .close_modal_button {
     width: 60%;
@@ -54,7 +54,9 @@
 
 @media (max-width: 800px) {
   .past_events_grid_container {
-    grid-template-columns: 1fr;
+    /* grid-template-columns: 1fr; */
+
+    margin: 30px 12px 10px 12px;
   }
 
   .close_modal_button {
